Security layer done, need to add role based access control, but otherwise, auth works, backend is stateless and uses jwt for auth and cookies to store. OAuth2 implemented to be stateless, so cookies store context before exiting to auth